--- a/contact.html
+++ b/contact.html
@@ -1,66 +1,61 @@
- <!DOCTYPE html>
- <html>
- <head>
- <title></title>
- <link href="assets/reset.css" rel="stylesheet" type="text/css" />
- <link href="assets/style.css" rel="stylesheet" type="text/css" />
+<!DOCTYPE html>
+<html>
 
- </head>
- <body>
- <div class="page-wrap">
- <table id="site_table">
- <tr id="top_nav">
- <td style="width:7%"></td>
- <td id="name_logo">Bradley Pulaski</td>
- <td id="longspan"></td>
-  <td class="top_link "><a href="index.html">About</a> <div class='divider'></div> <a href="portfolio.html">Portfolio</a> <div class='divider'></div> <a href="contact.html">Contact</a></td>
-<td  style="width:40px"></td>
- </tr>
- <tr>
- <td></td>
- <td colspan="2">
- <div id="contact"> 
- <h2>Contact</h2>
- <hr/>
- 
- <form>
- <label for="name">Name</label><br/>
- <input name="name" placeholder="John Smith" type="text" /><br/>
-  <label for="email">Email</label><br/>
- <input name="email" placeholder="example@gmail.com" type="text" /><br/>
-   <label for="message">Message</label><br/>
- <textarea name="message" ></textarea><br/>
- <input type="submit" value="Submit"/>
- </form>
- 
- </div>
- </td>
- <td>
-  <div id="social_media"> 
-  <h2>Connect with Me</h2>
-  <hr/>
-  <div id="social_images">
-  <a href="https://github.com/linksys17"><img src="images/github.png" /></a>
-  <a href="https://www.linkedin.com/in/brad-pulaski-3a596ba5/"><img src="images/linkedin.png" /></a>
-    <a href="https://stackoverflow.com/users/9008893/bradley-pulaski?tab=profile"><img id="stackoverflow" src="images/stackoverflow.png" /></a>
-  </div>
- </div>
- </td>
- <td></td>
- </tr>
- </table></div>     
- <footer clase="site-footer">
- &#169; Copyright <span id="copyright_year"></span> Bradley Pulaski
- </footer>
-  </body>
+    <head>
+        <title>Contact</title>
+        <link href="assets/reset.css" type="text/css" rel="stylesheet"/>
+        <link href="assets/style.css" type="text/css" rel="stylesheet"/>
+    </head>
 
- <script>
- var year = new Date().getFullYear();
- document.getElementById("copyright_year").innerHTML = year;
- </script>
- <style>
- #social_media {
- top: -260px;
- }
- </style>
- </html>
+    <body>
+    <center>
+        <div id="headbar">
+        </div>
+
+        <div id="wrapper">
+            <header id="header">
+                <div id="name-logo" class="teal_bg"><h1 class="header-text">Bradley Pulaski</h1></div>
+                <span id="top-links">
+                    <a class="default_font_color" href="index.html">About</a>
+                    <span class="divider"></span>
+                    <a class="default_font_color" href="portfolio.html">Portfolio</a>
+                    <span class="divider"></span>
+                    <a class="default_font_color" href="contact.html">Contact</a>
+                </span>
+            </header>
+            <section id="content">
+                <div id="main-content">
+                    <h2 class="subheader teal_font header-text">Contact</h2>
+                    <hr/>
+                    <form>
+                        <label for="name">Name</label><br/>
+                        <input name="name" placeholder="John Smith" type="text" /><br/>
+                        <label for="email">Email</label><br/>
+                        <input name="email" placeholder="example@gmail.com" type="text" /><br/>
+                        <label for="message">Message</label><br/>
+                        <textarea name="message" ></textarea><br/>
+                        <input type="submit" value="Submit"/>
+                    </form>
+                </div>
+                <div id="sidebar">
+                    <h2 class="subheader teal_font header-text">Connect with Me</h2>
+                    <hr/>
+                    <div id="social-images">
+                        <a target="_blank" href="https://github.com/linksys17"><img src="images/github.png" /></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/brad-pulaski-3a596ba5/"><img src="images/linkedin.png" /></a>
+                        <a target="_blank" href="https://stackoverflow.com/users/9008893/bradley-pulaski"><img id="stackoverflow" src="images/stackoverflow.png" /></a>
+                    </div>
+                </div>
+                <br style="clear:both;" />
+            </section>
+        </div>
+    </center>
+</body>
+<footer>
+    &copy; Copyright <span id="copyright_year"></span> Bradley Pulaski
+</footer>
+<script>
+    var year = new Date().getFullYear();
+    document.getElementById("copyright_year").innerHTML = year;
+</script>
+</html>
